--- a/indx.html
+++ b/indx.html
@@ -45,6 +45,44 @@
   </div>
 
 </section>
+
+
+
+
+
+<section class="features display-flex">
+      <div>
+
+            <h3 id="feature-section-title" class="section-tital">Features you will <br> love & enjoy</h3>
+            <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised.</p> 
+               
+            <div class="feature-card">
+                  <h4 class="feature-title">Dexktop & Mobile Version</h4>
+                  <p class="text-light-gray">There are many variations of passages of  Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised.2.</p>
+              </div>
+              <div class="feature-card">
+                  <h4 class="feature-title">Dexktop & Mobile Version</h4>
+                  <p class="text-light-gray">There are many variations of passages of  Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised.2.</p>
+              </div>
+              <div class="feature-card">
+                  <h4 class="feature-title">Dexktop & Mobile Version</h4>
+                  <p class="text-light-gray">There are many variations of passages of  Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised 3.</p>
+              </div>
+              <div class="feature-card">
+                  <h4 class="feature-title">Dexktop & Mobile Version</h4>
+                  <p class="text-light-gray">There are many variations of passages of  Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised 4.</p>
+               </div>
+
+      </div>
+ <div>
+      <img class="feature-artchitect" src="images/architect.png" alt="">
+      <button id="experience-badge" class="btn-primary">
+            <span id="Experience-years">10+years</span>
+            <br>
+            <span>Experience</span>
+      </button>
+    </div>
+   </section>
 <!-- some fact  -->
 <section>
       <h3 class="section-tital">some facts</h3>
