--- a/indx.html
+++ b/indx.html
@@ -46,10 +46,6 @@
 
 </section>
 
-
-
-
-
 <section class="features display-flex">
       <div>
 
@@ -119,7 +115,6 @@
       </div>
 
 </section>
-
 <!-- our fact -->
  <section class="our sponsors">
 <div class="sponsor-info">
@@ -140,6 +135,7 @@
 
       </main>
       <footer>
+            <h5 class="foot display-flex">All rights reserved copyright@2023 startup landing page design</h5>
       </footer>
 </body>
 </html>
